<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/modal_game_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/winner_trophy"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"

        android:layout_marginBottom="8dp"
        android:contentDescription="@string/logo_description"
        android:src="@drawable/trophy_24"
        app:layout_constraintBottom_toTopOf="@+id/winner_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnBackground" />

    <TextView
        android:id="@+id/winner_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Winner name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/winner_results_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/winner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/winner_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/winner_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/winner_results_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loser_results_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/winner_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winner_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earned_points_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loser_results_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/action_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/loser_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/loser_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Losser name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loser_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_game_result_modal"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            app:cornerRadius="1dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>