<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/set_players"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SetPlayersActivity" >

        <TextView
            android:id="@+id/set_players_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"

            android:text="@string/set_player_title"

            app:layout_constraintBottom_toTopOf="@+id/player_one_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:id="@+id/player_one_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/player_two_fields"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_players_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:labelFor="@id/player_one_name"
                android:text="@string/player_one" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_player_one"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/man_24" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_one_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_two_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/set_players_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_one_fields">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:labelFor="@id/player_two_name"
                android:text="@string/player_two" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_player_two"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/man_3_24" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/player_two_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_players_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"

            app:cornerRadius="1dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player_two_fields" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>